added repayments to api docs
